fix color contrast

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -122,7 +122,7 @@ ul.navigation {
 }
 
 a.active {
-    color: rgb(255, 192, 19);
+    color: rgb(251, 255, 0);
     text-decoration: underline;
 }
 
@@ -144,7 +144,7 @@ Banner Message
 -----------------------------------------*/
 #banner {
     text-align: center;
-    background-color: rgb(235, 200, 100);
+    background-color: rgb(247, 188, 62);
     padding: 10px;
 }
 
